[package]
name = "doke-lib"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]  # Both dynamic lib and Rust lib

[dependencies]
godot = "0.3.5"
markdown = "1.0.0"
regex = "1.11.2"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
yaml-rust2 = "0.10.3"
